# lapig-stac

./: .editorconfig  .env.example  .gitignore  Dockerfile  Justfile  README.md  docker-compose.yml
.github/workflows/: prod.yml
browser-v2/: .dockerignore  Dockerfile  README.md  angular.json  package-lock.json  package.json  proxy.conf.json
browser-v2/docs/: DESIGN_PROPOSAL.md
browser-v2/public/: site.webmanifest
browser-v2/public/i18n/: en.json  pt-BR.json
browser-v2/src/: app.component.ts  app.config.ts  app.routes.ts  index.html
browser-v2/src/assets/: styles.scss  tailwind.css
catalog/: items_rustac.parquet  pasture-area.json  pasture-vigor.json
catalog/collections/: pasture-area.json  pasture-vigor.json
catalog/items/pasture-area/: pasture-area-1985.json  pasture-area-1986.json  pasture-area-1987.json  pasture-area-1988.json  pasture-area-1989.json  pasture-area-1990.json  pasture-area-1991.json  pasture-area-1992.json  (+32 more)
catalog/styles/: pasture-vigor.qml
docker/: stac_api_app.py
docker/dev/: entrypoint.sh
docker/prod/: Dockerfile  entrypoint.sh  nginx.conf
docs/: ARCHITECTURE.md  DEPLOYMENT.md  STAC-COMPLIANCE.md
infra/nginx/: nginx.conf
pipeline/: pyproject.toml  run_pipeline.py
pipeline/config/: collections.yaml
pipeline/pipeline/: api_proxy.py  build_geoparquet.py  cli.py  cog_thumbnail.py  enrich_metadata.py  excel_parser.py  generate_stac.py  load_pgstac.py  local_scanner.py  validate_catalog.py
pipeline/styles/: pasture-area.qml  pasture-area.sld  pasture-vigor.sld
video/: package-lock.json  package.json
video/src/: LapigStacVideo.tsx  Root.tsx  colors.ts  fonts.ts
(+81 files in other folders)
