[project]
name = "lapig-stac-pipeline"
version = "0.1.0"
description = "LAPIG STAC pipeline: reads Excel metadata and generates STAC Items + GeoParquet"
requires-python = ">=3.11"
dependencies = [
    "pystac>=1.11",
    "geopandas>=1.0",
    "openpyxl>=3.1",
    "pyyaml>=6.0",
    "click>=8.1",
    "shapely>=2.0",
    "pyarrow>=15.0",
]

[project.optional-dependencies]
validate = ["stac-validator>=4.1,<5"]
# Carregamento em pgstac (ingestão): usado pelo comando
# `lapig-stac load-pgstac` e pelo entrypoint de produção. Em produção, o
# pacote é instalado direto no container (ver docker/prod/Dockerfile), mas
# o extra permite instalar localmente com `uv sync --extra pgstac`.
pgstac = ["pypgstac[psycopg]==0.9.6"]

[project.scripts]
lapig-stac = "pipeline.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["pipeline"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
